// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PodcastEpisodesListItem > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <track-play-pause-stub image="image" trackid="podcast-episode-0" tracknumber="1" hideimage="false" large="true"></track-play-pause-stub>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <phcheckcircle size="24"></phcheckcircle>
          </div><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Play Episode </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to queue </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to playlist </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <!--v-if-->
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Delete episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the InteractionWrapper component emits the click event > when the podcast episode is not downloaded > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper downloadPodcastEpisode">
          <div class="centerAll preloadImage overlap"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image"></div><button class="centerItems buttonLink overlap buttonLink overlap buttonLink" draggable="false" type="button" title="Download episode">
            <phdownload aria-hidden="true" class="icon" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Download episode">
            <phdownload aria-hidden="true" class="icon" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button></div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the isRecentList prop is true and the podcast episode is downloaded > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <track-play-pause-stub image="image" trackid="podcast-episode-0" tracknumber="1" hideimage="false" large="true"></track-play-pause-stub>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <phcheckcircle size="24"></phcheckcircle>
          </div><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Play Episode </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to queue </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to playlist </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem" to="[object Object]"><a class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false">
            <!--v-if--><span class="clamp text"> Go to podcast </span>
          </a></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Delete episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the podcast episode has no author > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <track-play-pause-stub image="image" trackid="podcast-episode-0" tracknumber="1" hideimage="false" large="true"></track-play-pause-stub>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <!--v-if-->
          <!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <phcheckcircle size="24"></phcheckcircle>
          </div><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Play Episode </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to queue </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to playlist </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <!--v-if-->
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Delete episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the podcast episode has no description > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <track-play-pause-stub image="image" trackid="podcast-episode-0" tracknumber="1" hideimage="false" large="true"></track-play-pause-stub>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <!--v-if-->
          <!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <phcheckcircle size="24"></phcheckcircle>
          </div><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Play Episode </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to queue </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to playlist </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <!--v-if-->
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Delete episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the podcast episode is downloaded > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <track-play-pause-stub image="image" trackid="podcast-episode-0" tracknumber="1" hideimage="false" large="true"></track-play-pause-stub>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems">
          <div class="centerItems downloaded" title="Downloaded">
            <phcheckcircle size="24"></phcheckcircle>
          </div><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button>
        </div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Play Episode </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to queue </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Add to playlist </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <!--v-if-->
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
        <li aria-hidden="true" class="divider"></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Delete episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;

exports[`PodcastEpisodesListItem > when the podcast episode is not downloaded > matches the snapshot 1`] = `
"<div class="lazyLoadContent trackRow trackBorder spaceBetween">
  <div class="interactionWrapper" draggable="false">
    <div class="trackCell trackPodcastEpisode column">
      <div>
        <div class="overlapWrapper downloadPodcastEpisode">
          <div class="centerAll preloadImage overlap"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image"></div><button class="centerItems buttonLink overlap buttonLink overlap buttonLink" draggable="false" type="button" title="Download episode">
            <phdownload aria-hidden="true" class="icon" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button>
        </div>
        <div class="column">
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <h4 class="strong mBM">title</h4>
              </div>
            </div>
          </div>
          <div class="marqueeScroll" inert="">
            <div class="bulletList inner">
              <div class="content">
                <p class="strong mBM">author</p>
              </div>
            </div>
          </div><!-- eslint-disable vue/no-v-html -->
          <div class="clamp2">description</div><!-- eslint-enable vue/no-v-html -->
        </div>
      </div>
      <div class="centerItems podcastOptions">
        <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Download episode">
            <phdownload aria-hidden="true" class="icon" size="24" weight="regular"></phdownload><span class="clamp text visuallyHidden"> Download episode </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" title="Episode information">
            <phinfo aria-hidden="true" class="icon" size="24" weight="regular"></phinfo><span class="clamp text visuallyHidden"> Episode information </span>
          </button></div>
        <div class="marqueeScroll">
          <div class="bulletList inner">
            <div class="content">
              <ul class="bulletList">
                <li><span class="visually-hidden">Published: </span> 01/01/2000</li>
                <li><span class="visually-hidden">Duration: </span><time>00:19</time></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="trackCell trackOptions trackPodcastEpisode">
      <div>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Episode information </span>
          </button></li>
        <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween item spaceBetween item" draggable="false" type="button">
            <!--v-if--><span class="clamp text"> Download episode </span>
          </button></li>
      </div>
    </div>
  </div>
</div>"
`;
